@@ -11,6 +11,9 @@ Unreleased Changes
     the switch to Google's native API (before S3QL was using Google's
     S3 compatibility layer).
 
+  * Command line options specified in the authinfo file (in particular
+    --backend-options) are now parsed correctly.
+
 2018-12-28, S3QL 2.33
 
   * Fixed a sporadic test failure in t5_cache.py.
